<resources>
    <string name="app_name">HALP</string>
    <string name="welcom_btn">Get Started</string>
    <string name="app_title">HALP</string>
    <string name="login_label"> Login </string>
    <string name="who_you_are"> Who you are? </string>
    <string name="hospital"> Hospital</string>
    <string name="house_nursing"> Nursing Home </string>
    <string name="patient"> Patient </string>
    <string name="accepted">Accepted</string>
    <string name="waiting_start">Waiting start</string>
    <string name="optional">Optional</string>
    <string name="navigationbottom_warning"> You cannot leave in this stage </string>
    <string name="homelogin_notice"> This feature is coming soon </string>
    <string name="trip_remark">Remarks: Wheelchair, stretcher and stairs</string>
    <string name="dialog_remark_title"> Write something </string>
    <string name="schedule_ride_notification"> You have a notification from schedule ride </string>
    <string name="schedule_detail"> Schedule Detail </string>
    <string name="submit_schedule_title"> REGISTER SCHEDULE </string>
    <string name="something_was_wrong"> Something was wrong </string>
    <string name="ferry_terminals"> Ferry terminals </string>
    <string name="a_and_e"> A&amp;E </string>
    <string name="imh"> IMH </string>
    <string name="airport_tarmac">Airport (Tarmac)</string>
    <string name="base_price"> Base price </string>
    <string name="distance_price"> Distance price </string>
    <string name="extra_time_price"> Extra time price </string>
    <string name="tax_price"> Tax price </string>
    <string name="staircase_less_80"> Staircase less than 80KG </string>
    <string name="oxygen_tank"> Oxygen tank </string>
    <string name="trips"> Trips </string>
    <string name="history_payment"> History Payment </string>
    <string name="block_number"> Block number </string>
    <string name="unit_number"> Unit number </string>
    <string name="floor"> Floor </string>
    <string name="ward"> Ward </string>
    <string name="postal"> Postal </string>
    <string name="purpose"> Purpose </string>
    <string name="special_request"> Special Request </string>
    <string name="preferred_username"> Preferred Username </string>
    <string name="contact_name"> Contact Name </string>
    <string name="contact_number"> Contact Number </string>
    <string name="address"> Address </string>
    <string name="family_member_name"> Family member name </string>
    <string name="accompaniment"> Accompaniment </string>
    <string name="mobile"> Mobile </string>
    <string name="email_address"> Email Address </string>
    <string name="floor_and_unit">" Floor &amp; Unit #:"</string>
    <string name="plate_number">Vehicle plate number</string>
    <string name="home_number"> Home number </string>
    <string name="room_number"> Room number </string>
    <string name="bed_number"> Bed number </string>
    <string name="time_of_discharge">Time of discharge</string>
    <string name="street_name"> Street name </string>
    <string name="weight"> Weight </string>
    <string name="lift_landing">Lift landing</string>
    <string name="stair"> Stairs </string>
    <string name="no_stair"> No Stairs </string>
    <string name="low_stair"> Low Stairs </string>
    <string name="stretcher"> Stretcher </string>
    <string name="wheel_chair"> Wheel chair </string>
    <string name="oxygen">Oxygen</string>
    <string name="oxygen_liter"> Oxygen (Liters) </string>
    <string name="escorts"> Escorts </string>
    <string name="patient_name"> Patient name </string>
    <string name="additional_patient_information"> Additional Patient\'s information </string>
    <string name="case_type"> Case Type</string>
    <string name="assistive_device"> Assistive device </string>
    <string name="submit"> SUBMIT </string>
    <string name="billing_info">Billing info</string>
    <string name="cancellation_reason_warning">Please select a cancellation reason</string>
    <string name="cancellation_billing_info_title">Cancellation Fee</string>
    <string name="cancellation_billing_info_content">will be charged for canceling trip with less than 2 hours notice!</string>
    <string name="hospital_discharge_warning_title">Notice for Discharge</string>
    <string name="hospital_discharge_warning_content">For hospital discharge case, please use schedule function</string>
    <string name="cancellation_policy_title">Cancellation Policy</string>
    <string name="cancellation_policy_content">There is a penalty charge for cancellation done less than 2 hours before scheduled trip</string>
    <string name="country_code_warning"> Do not input your country code in phone number field </string>
    <string name="please_select_your_payment_option">Please select your payment option below</string>
    <string name="txt_schedule_warning_content">The duration of the pick-up time and the medical time is too little with the time of the trip. Are you sure you want to book a schedule?</string>
    <string name="txt_schedule_warning_title"> Schedule alerts </string>
    <string name="ambulance_operator_notice">was chosen! Choose another ambulance operator below if you want!</string>
    <string name="another_ambulance_operator">Choose another ambulance operator here!</string>
    <string name="edittext_empty_notice"> This field cannot be empty</string>
    <string name="txt_hourly_booking"> Rent by hour </string>
    <string name="edittext_inapproriate_notice"> This field is invalid</string>
    <string name="txt_patient_conditions"> Patient condition </string>
    <string name="txt_payment_mode"> Payment mode </string>
    <string name="add_schedule"> Add schedule </string>
    <string name="weight_less_than_eighty" translatable="false"> 0KG - 80KG</string>
    <string name="weight_over_eighty" translatable="false"> 80KG - 100KG</string>
    <string name="weight_over_one_hundred" translatable="false"> 100KG - 120KG </string>
    <string name="weight_over_one_hundred_and_twenty" translatable="false"> 120KG - 150KG </string>
    <string name="medical_appointment"> Medical appointment </string>
    <string name="ad_hoc"> AD - HOC (1 way) </string>
    <string name="airport_changi">Changi Airport</string>
    <string name="airport_selectar">Selectar Airport</string>
    <string name="hospital_discharge"> Hospital discharge (1 way) </string>
    <string name="any_ambulance"> Any Ambulance Operator </string>
    <string name="action_home"> Home </string>
    <string name="action_history"> History </string>
    <string name="action_schedule"> Schedule </string>
    <string name="action_account"> Account </string>
    <string name="pickup_type"> Pickup type </string>
    <string name="login_email">Email Id</string>
    <string name="email_mobile">Email or Phone number</string>
    <string name="login_Password">Password</string>
    <string name="login_btn">Sign In</string>
    <string name="forgot_pass_btn">Forgot Password?</string>
    <string name="new_user_btn">Do not have an account ?</string>
    <string name="req_pass_btn">Request Password</string>
    <string name="register_btn">Register</string>
    <string name="forgot_txt_note">Please Enter Email Id to Receive Password</string>
    <string name="full_name">Fullname</string>
    <string name="last_Name">Last Name</string>
    <string name="your_password">Your Password</string>
    <string name="your_email">Your Email</string>
    <string name="phn_no">Phone Number</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_select_country">Select Country</string>
    <string name="txt_select_currency">Select Currency</string>
    <string name="login_cancelled">login cancelled</string>
    <string name="login_failed">login failed</string>
    <string name="btn_edit">EDIT</string>
    <string name="btn_save">SAVE</string>
    <string name="dialog_exit_caps">EXIT</string>
    <string name="dialog_exit_text">Are you sure ?</string>
    <string name="txt_current_loc">Pickup location</string>
    <string name="txt_pickup_loc">Set Pickup location</string>
    <string name="txt_set_drop_loc">Set Drop location</string>
    <string name="txt_drop_loc">Drop Location</string>
    <string name="txt_types_title">Available Cars</string>
    <string name="txt_types_payment">Cash</string>
    <string name="txt_driver">Driver</string>
    <string name="total_fare">TOTAL FARE</string>
    <string name="trip_summary">TRIP SUMMARY</string>
    <string name="rate_ride">RATE YOUR RIDE</string>
    <string name="table_price_notice">The fare reflected is indicative only, Final fare will be subjected to changes as deemed by Ambulance Operator.</string>
    <string name="pre_select_payment_title">Select your payment below</string>
    <string name="pre_select_payment_cash">Cash</string>
    <string name="pre_select_payment_none">None</string>
    <string name="pre_select_payment_creditcard">Credit Cards</string>
    <string name="pre_select_payment_paypal">PayPal</string>
    <string name="policy_terms_agree">I agree to the Privacy and Policies, Terms and Conditions.</string>
    <string name="privacy_policy"><u>Privacy and Policies</u></string>
    <string name="terms_conditions"><u>Terms and Conditions</u></string>
    <string name="privacy_terms_warning">You must agree with our Privacy and Policies, Terms &amp; Conditions for Sign up</string>
    <string name="txt_male">male</string>
    <string name="txt_female">female</string>
    <string name="txt_select_time_pickup">Select Date and time pickup</string>
    <string name="txt_select_time_medical">Select Date and time for medical</string>
    <string name="dialog_no_internet">No Internet</string>
    <string name="no_internet">Internet not available</string>
    <string name="dialog_no_inter_message">You have not active internet connection.</string>
    <string name="dialog_enable_3g">Enable 3G</string>
    <string name="dialog_enable_wifi">Enable WIFI</string>
    <string name="dialog_exit">Exit</string>
    <string name="txt_mobile_error">Please Enter Mobile number!</string>
    <string name="txt_fname_error">Please Enter First name!</string>
    <string name="txt_lname_error">Please Enter Last name!</string>
    <string name="txt_fullname_error">Please Enter Full Name!</string>
    <string name="txt_incorrect_error">Incorrect Email id!</string>
    <string name="txt_picture_error">Please choose profile picture!</string>
    <string name="txt_phone_error">Please Enter phone number!</string>
    <string name="txt_pass8_error">Password must be at least 8 character!</string>
    <string name="txt_email_error">Please Enter Email ID!</string>
    <string name="txt_pass_error">Please Enter Password!</string>
    <string name="txt_drivers_error">There are no drivers available in this service type!</string>
    <string name="txt_load">Loading...</string>
    <string name="txt_confirm">Confirming...</string>
    <string name="txt_signin">Signing in...</string>
    <string name="reg_load">Registering...</string>
    <string name="updating_pro_load">Updating profile...</string>
    <string name="req_pass_load">Requesting Password...</string>
    <string name="my_home">Home</string>
    <string name="my_payment">Add Payment Options</string>
    <string name="pre_select_payment">Pre-select payment</string>
    <string name="my_free_ride">Free Rides</string>
    <string name="ask_bot">Ask Bot</string>
    <string name="ride_history">Ride History</string>
    <string name="my_promo">Promos</string>
    <string name="later_rides">Your Scheduled Rides</string>
    <string name="my_help">Help</string>
    <string name="txt_logout">Logout</string>
    <string name="drawer_open">open</string>
    <string name="logout_text">Are you sure you want to Signout?</string>
    <string name="txt_social_login">Or connect using a social account.</string>
    <string name="txt_no">NO</string>
    <string name="txt_yes">YES</string>
</resources>