<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_gravity="center"
    android:background="@android:color/transparent"
    android:elevation="@dimen/_10sdp"
    app:cardCornerRadius="@dimen/_20sdp"
    app:cardBackgroundColor="@color/white"
    android:layout_margin="@dimen/_10sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:background="@drawable/background_with_shadow">

        <LinearLayout
            android:id="@+id/title_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_power_off"
                android:tint="@color/deeporange600"/>

            <TextView
                android:id="@+id/logout_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_logout"
                android:textColor="@color/gray900"
                android:layout_marginLeft="@dimen/_5sdp"
                android:textSize="@dimen/_17ssp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/logout_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_below="@+id/title_group"
            android:text="@string/logout_text"
            android:textColor="@color/gray600"
            android:textSize="@dimen/_14sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/btn_logout_yes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@color/lightblueA700"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/txt_yes"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/btn_logout_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_weight="0.5"
                android:background="@color/lightblueA700"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/txt_no"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />
        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>