<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <FrameLayout
        android:id="@+id/frame_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/login_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:padding="@dimen/_10sdp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:tint="@color/lightblueA700"
                    app:srcCompat="@drawable/close" />

                <LinearLayout
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/btn_cancel"
                    android:layout_marginBottom="@dimen/_30sdp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/login_label"
                        android:textAllCaps="true"
                        android:textColor="@color/lightblueA700"
                        android:textSize="@dimen/_20ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/who_you_are"
                        android:textAllCaps="true"
                        android:textColor="@color/lightblueA700"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold"/>

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/social_img"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_100sdp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/background_user_login"/>

                </LinearLayout>

                <!--<ImageView
                    android:id="@+id/img_logo_application"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_170sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/logo_application" />-->

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/login_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!--<LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_weight="1"
                        android:scaleType="centerCrop"
                        android:src="@drawable/background_gradient_line" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:layout_weight="1"
                        android:scaleType="centerCrop"
                        android:src="@drawable/background_gradient_line" />


                </LinearLayout>-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1    "
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/_20sdp"
                    android:paddingRight="@dimen/_20sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="@drawable/background_oval_stroke"
                        android:paddingEnd="@dimen/_30sdp"
                        android:paddingBottom="@dimen/_5sdp"
                        android:paddingTop="@dimen/_5sdp"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_username"
                            android:layout_marginStart="@dimen/_20sdp"
                            android:padding="@dimen/_5sdp"/>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_layout_userid"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_10sdp">

                            <EditText
                                android:id="@+id/edt_login_userid"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_30sdp"
                                android:background="@color/white"
                                android:hint="@string/email_mobile"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:padding="@dimen/_5sdp"
                                android:singleLine="true"
                                android:textColor="@color/lightblueA700"
                                android:textColorHint="@color/lightblueA700"
                                android:textSize="@dimen/_15ssp" />

                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="@drawable/background_oval_stroke"
                        android:paddingEnd="@dimen/_30sdp"
                        android:paddingBottom="@dimen/_5sdp"
                        android:paddingTop="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_password"
                            android:layout_marginStart="@dimen/_20sdp"
                            android:padding="@dimen/_5sdp"/>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_layout_pass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:weightSum="1"
                            app:passwordToggleDrawable="@mipmap/eye"
                            app:passwordToggleEnabled="true">

                            <EditText
                                android:id="@+id/edt_login_password"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_30sdp"
                                android:background="@color/white"
                                android:hint="@string/login_Password"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:padding="@dimen/_5sdp"
                                android:singleLine="true"
                                android:textColor="@color/lightblueA700"
                                android:textColorHint="@color/lightblueA700"
                                android:textSize="@dimen/_15ssp" />

                            <ImageButton
                                android:id="@+id/loc_pass"
                                android:layout_width="40dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:background="@null"
                                android:padding="10dp"
                                android:src="@mipmap/eye"
                                android:visibility="gone" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/btn_login"
                        android:layout_width="@dimen/_150sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:background="@drawable/background_gradient_oval_button"
                        android:gravity="center"
                        android:text="@string/login_btn"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_20ssp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/btn_register_social"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/txt_social_login"
                        android:textColor="@color/lightblueA700"
                        android:textSize="@dimen/_14ssp" />

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/relative_footer"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="bottom|center_horizontal"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp">

                    <TextView
                        android:id="@+id/btn_new_user"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:gravity="center"
                        android:text="@string/new_user_btn"
                        android:textColor="@color/lightblueA700"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="italic"/>

                    <TextView
                        android:id="@+id/btn_forgot_pass"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:text="@string/forgot_pass_btn"
                        android:textColor="@color/deeporange600"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="italic"/>
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>